--- a/src/css/css.css
+++ b/src/css/css.css
@@ -1,6 +1,19 @@
-/*
-*  stylesheet for search2
-*/
+/*-------------------------------------------------------------------------
+ *
+ * This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this
+ * file, You can obtain one at http://mozilla.org/MPL/2.0/.
+ *
+ * Copyright (c) 2014-2015, wurenny@gmail.com, All rights reserved
+ *
+ * IDENTIFICATION
+ *     css/css.css
+ *
+ * This file is part of search2 project
+ * css.css is the stylesheet for search2 bar
+ *
+ *-------------------------------------------------------------------------
+ */
 
 #search2.search2Skin {
 	/*
