--- a/src/opt/options.css
+++ b/src/opt/options.css
@@ -1,3 +1,21 @@
+/*-------------------------------------------------------------------------
+ *
+ * This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this
+ * file, You can obtain one at http://mozilla.org/MPL/2.0/.
+ *
+ * Copyright (c) 2014-2015, wurenny@gmail.com, All rights reserved
+ *
+ * IDENTIFICATION
+ *     opt/options.css
+ *
+ * This file is part of search2 project
+ * options.css is the stylesheet for option page
+ *
+ *-------------------------------------------------------------------------
+ */
+
+
 *{
     padding:0px;
     margin:0px;
