--- a/src/css/css.css
+++ b/src/css/css.css
@@ -2,7 +2,7 @@
  *
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
- * file, You can obtain one at http://mozilla.org/MPL/2.0/.
+ * file, You can obtain one at https://mozilla.org/MPL/2.0/.
  *
  * Copyright (c) 2014-2015, wurenny@gmail.com, All rights reserved
  *
@@ -162,4 +162,3 @@ span.search2Text_AtTOP span.search2Text_Atbottom {
 span.search2Text_Atleft {
 	width:16px;
 }
-
