--- a/src/more/more.css
+++ b/src/more/more.css
@@ -1,18 +1,21 @@
-/*-------------------------------------------------------------------------
- *
- * This Source Code Form is subject to the terms of the Mozilla Public
- * License, v. 2.0. If a copy of the MPL was not distributed with this
- * file, You can obtain one at https://mozilla.org/MPL/2.0/.
- *
- * Copyright (c) 2014-2025, wurenny@gmail.com, All rights reserved
- *
- * IDENTIFICATION
- *     more/more.css
- *
- * This file is part of search2 project
- * more.css is the stylesheet for search2's more color box
- *
- *-------------------------------------------------------------------------
+/*---------------------------------------------------------------------------------*
+ *                                                                                 *
+ * This Source Code is subject to the Proprietary Software License.                *
+ * You shall use it only in accordance with the terms of the license agreement.    *
+ * You can contribute the source code by submitting pull request on Github:        *
+ * https://github.com/wurenny/search2                                              *
+ * But unauthorized copying, modification, distribution, or publication of this    *
+ * software, in whole or in part, is strictly prohibited.                          *
+ *                                                                                 *
+ * Copyright (c) 2014-2025, wurenny@gmail.com, All rights reserved                 *
+ *                                                                                 *
+ * IDENTIFICATION                                                                  *
+ *     more/more.css                                                               *
+ *                                                                                 *
+ * This file is part of search2 project                                            *
+ * more.css is the stylesheet for search2's more color box                         *
+ *                                                                                 *
+ *---------------------------------------------------------------------------------*
  */
 
 #search2colorbox {
