--- a/src/opt/opt.css
+++ b/src/opt/opt.css
@@ -10,10 +10,10 @@
  * Copyright (c) 2014-2025, wurenny@gmail.com, All rights reserved                 *
  *                                                                                 *
  * IDENTIFICATION                                                                  *
- *     opt/options.css                                                             *
+ *     opt/opt.css                                                                 *
  *                                                                                 *
  * This file is part of search2 project                                            *
- * options.css is the stylesheet for option page                                   *
+ * opt.css is the stylesheet for option page                                       *
  *                                                                                 *
  *---------------------------------------------------------------------------------*
  */
